kmom02 first commit

--- a/templates/about/about.html.twig
+++ b/templates/about/about.html.twig
@@ -14,14 +14,24 @@ About
 {% block content %}
 
 <section>
-	<nav>
-		<ul>
-			<li><a href="./">Presentation</a></li>
-			<li><a href="./about">About</a></li>
-			<li><a href="./report">report</a></li>
-			<li><a href="./card">report</a></li>
-		</ul>
-	</nav>
+<nav>
+	<ul>
+		<li>
+			<a href={{ asset('./') }}>Presentation</a>
+		</li>
+		<li>
+			<a href={{ asset('./about') }}>About</a>
+		</li>
+		<li>
+			<a href={{ asset('./report') }}>report</a>
+		</li>
+		<li>
+			<a href={{ asset('./card') }}>Card</a>
+		</li>
+		<hr>
+	</ul>
+</nav>
+
 
 <article>
 	<div class="container">
