--- a/templates/card/cardDeck.html.twig
+++ b/templates/card/cardDeck.html.twig
@@ -13,30 +13,64 @@ Card
 {% block content %}
 
 	<section>
-		<nav>
-			<ul>
-				<li>
-					<a href="./../../">Presentation</a>
-				</li>
-				<li>
-					<a href="./../../about">About</a>
-				</li>
-				<li>
-					<a href="./../../report">Report</a>
-				</li>
-				<li>
-					<a href="./../../card">Card</a>
-				</li>
-				<hr>
-			</ul>
-		</nav>
+<nav>
+	<ul>
+		<li>
+			<a href={{ asset('./') }}>Presentation</a>
+		</li>
+		<li>
+			<a href={{ asset('./about') }}>About</a>
+		</li>
+		<li>
+			<a href={{ asset('./report') }}>report</a>
+		</li>
+		<li>
+			<a href={{ asset('./card') }}>Card</a>
+		</li>
+		<hr>
+	</ul>
+</nav>
+
 
 		<article>
 				<h1>{{ title }}</h1>
 			<div class="container">
 				{% for item in test %}
 <div class="card">
-	{{item.rank}}-{{item.suit}}-{{item.value}}
+
+{% if item.suit == "&hearts;" %}
+<p>{{item.rank}}</p>
+
+<p>&#10084;&#65039;</p>
+
+
+{% endif %}
+
+{% if item.suit == "&diams;" %}
+
+<p>&diams;{{item.rank}}</p>
+
+
+{% endif %}
+
+{% if item.suit == "&clubs;" %}
+
+
+<p>&clubs;{{item.rank}}</p>
+
+
+{% endif %}
+
+{% if item.suit == "&spades;" %}
+
+
+<p>&spades;{{item.rank}}</p>
+
+
+{% endif %}
+
+
+
 </div>
 
 				{% endfor %}
