--- a/templates/report/report.html.twig
+++ b/templates/report/report.html.twig
@@ -13,13 +13,22 @@
 
 <section>
 	<nav>
-		<ul>
-			<li><a href="./">Presentation</a></li>
-			<li><a href="./about">About</a></li>
-			<li><a href="./report">report</a></li>
-			<li><a href="./card">report</a></li>
-		</ul>
-	</nav>
+			<ul>
+				<li>
+					<a href={{ asset('./') }}>Presentation</a>
+				</li>
+				<li>
+					<a href={{ asset('./about') }}>About</a>
+				</li>
+				<li>
+					<a href={{ asset('./report') }}>report</a>
+				</li>
+				<li>
+					<a href={{ asset('./card') }}>Card</a>
+				</li>
+				<hr>
+			</ul>
+		</nav>
 
 	<article>
 <div class="container">
