Done with first part

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -113,6 +113,14 @@ footer h2 {
 }
 
 .card {
+  height: 100px;
+  width: 50px;
+  background-color:white;
+  border-color: #808080 #000000 #000000 #808080;
+  border-width: 1px;
+  border-style: solid;
+  color: #000000;
+  /*
   background-color:white;
   border-color: #808080 #000000 #000000 #808080;
   border-width: 1px;
@@ -123,5 +131,10 @@ footer h2 {
   height: 5.00em;
 
   flex: 1 0 21%;
-  
+  */
+}
+
+.player {
+  display: flex;
+flex-direction: column;
 }
