--- a/templates/card/card.html.twig
+++ b/templates/card/card.html.twig
@@ -38,7 +38,8 @@ Cards undersidor
 					<li><a href= {{ asset('./card/deck') }}>card/deck</a></li>
 					<li><a href={{ asset('./card/deck/shuffle') }}>card/deck/shuffle</a></li>
 					<li><a href= {{ asset('./card/deck/draw') }}>card/deck/draw</a></li>
-					<li><a href="./card/deck/draw/">Card</a></li>
+					<li><a href={{ path("deal", {'amountOfCards':"2",'amountOfPlayers':"1"} )}}>card/deck/deal/{}/{}</a></li>
+					<li><a href= {{ asset('./card/deck2') }}>card/deck2</a></li>
 				</ul>
 			
 			</div>
