--- a/templates/report/report.html.twig
+++ b/templates/report/report.html.twig
@@ -37,6 +37,54 @@
 				Man arbetade med template engine twig som var ett trevligt verktyg att använda sig utav.
 				Jag ser framemot att få jobba mer med ramverket i kommande kmom.</p>
 
+
+			<h2>Kmom02</h2>
+			<h3>Berätta kort om dina förkunskaper och tidigare erfarenheter kring objektorientering.</h3>
+			<p>Jag har gått kursen oopython och där fick man en god kunskap i vad objekorinterad programmering innebär.
+								Jag tror det inte är så stor skillnad mellan språken, grundpricipen är nog detsamma.</p>
+			<h3>Berätta kort om PHPs modell för klasser och objekt. Vilka är de grunder man behöver veta/förstå för att kunna komma igång och skapa sina första klasser?.</h3>
+			<p>Som guiden gick igenom så skapas ett objekt utifrån en klass som kan ses som en mall.
+								Ett objekt har medlemsvariabler och metoder.
+								När man har skapat ett objekt så kallas det för en instans av klassen.</p>
+
+			<h3>Reflektera kort över den kodbas, koden, strukturen som användes till uppgiften me/report, hur uppfattar du den?</h3>
+			<p>Min reflektion över strukturen är att den var väldigt logisk och enkel att förstå.
+			</p>
+			<h3>Med tanke på artikeln “PHP The Right Way”, vilka delar in den finner du extra intressanta och värdefulla? Är det några särskilda områden som du känner att du vill veta mer om? Lyft fram några delar av artikeln som du känner mer värdefulla.</h3>
+				<p>“PHP The Right Way” ser ut att ha en väldigt bra översikt på vad det innebär att programmera med php.
+								Jag har inte hunnit läsa så mycket av artikeln men Code style delen var ett intressant läsning.
+								Det förklaras i texten på vikten att man bör ha en gemmensam kod stil för att underlätta för andra utvecklare som kommer ta del av sin kod.</p>
+			<h3>Vilken är din TIL för detta kmom?</h3>
+			<p>Att få jobba med ramverket symfony var nytt för mig.
+								Det var en lagom stor uppgift där grunderna gicks igenom med artiklar som var väldigt intressanta.
+								Man arbetade med template engine twig som var ett trevligt verktyg att använda sig utav.
+								Jag ser framemot att få jobba mer med ramverket i kommande kmom.</p>
+
+			<h2>Kmom03</h2>
+			<h3>Berätta hur det kändes att modellera ett kortspel med flödesdiagram och psuedokod. Var det något som du tror stödjer dig i din problemlösning och tankearbete för att strukturera koden kring en applikation?.</h3>
+				<p>Det var en bra uppgift då man verkligen fick tänka till och därefter kändes själva koden lättare att få ihop med stöd utav flödesdiagram och psuedokod. 
+				Flödesshema kändes mer användbart då man får mer av en bild på hur spelet kommer att fungera.
+				Det är något jag kommer att använda mig oftare utav när jag bygger egna projekt.
+				Pseudokod är nog något jag får titta närmare på som jag kan utveckla.
+				I mitt tycke så känns flödesshema mer relevant att lära sig bra.
+				</p>
+
+
+			<h3>Berätta om din implementation från uppgiften. Hur löste du uppgiften, är du nöjd/missnöjd, vilken förbättringspotential ser du i din koden, dina klasser och applikationen som helhet?</h3>
+				<p>Jag löste uppgiften med att skapa en ny kontroller och en ny klass för själva spelet. 
+				Jag valde att när man startar spelet så ges ett kort till spelaren. 
+				Därefter kan man välja mellan 3 olika alternaitv, stanna, ta ett nytt kort eller starta om från början.När man trycker på stop så är det dealerns tur.</p>
+			<h3>Vilken är din känsla för att koda i ett ramverk som Symfony, så här långt in i kursen?</h3>
+				<p>Jag tycker det är ett mycket trevligt ramverk att jobba med. 
+				Allt har varit väldigt logiskt hitills och det finns bra info att hitta på nätet om man undrar över något.
+				Symfony hart en väldigt bra hemsida i mitt tycke iallafall.
+				Föreläsningarna hjälper även en att få bra kunskap i ramverkets alla delar.
+				Det ska bli kul att fortsätta koda i ramverket.</p>
+			<h3>Vilken är din TIL för detta kmom?</h3>
+				<p>Jag tycker att jag har blivit bättre på att skriva flödesshema vilket var en rolig del att göra på uppgiften.
+				Jag känner även att jag börjar förstå mig på symfony bättre också vilket är jättekul att få jobba med.</p>
+
+
     </article>
 </div>
 
