done with report kmom04

--- a/templates/report/report.html.twig
+++ b/templates/report/report.html.twig
@@ -84,7 +84,29 @@
 				<p>Jag tycker att jag har blivit bättre på att skriva flödesshema vilket var en rolig del att göra på uppgiften.
 				Jag känner även att jag börjar förstå mig på symfony bättre också vilket är jättekul att få jobba med.</p>
 
-
+			<h2>Kmom03</h2>
+				<h3>Berätta hur du upplevde att skriva kod som testar annan kod med PHPUnit och hur du upplever phpunit rent allmänt.</h3>
+					<p>Det var inga konstigheter att göra tester med PHPUnit.
+					Dom har en bra hemsida med documentationer om hur man går tillväga med sina tester. 
+					Det var en bra del av uppgiften att få göra lite tester. 
+					</p>
+				<h3>Hur väl lyckades du med kodtäckningen av din kod, lyckades du nå mer än 90% kodtäckning?</h3>
+					<p>På Card, Deck och Person klassen fick jag över 90% kodtäckning men det finns mer att test i andra klasser. 
+					Jag gjorde bara tester på klasserna som spelet game använde sig utav.
+					Det finns mer att testa i controllern, så det är något jag borde göra tester på senare om jag hinner med allt.</p>
+				<h3>Upplever du din egen kod som “testbar kod” eller finns det delar i koden som är mer eller mindre testbar och finns det saker som kan göras för att förbättra kodens testbarhet?</h3>
+					<p>Det gick bra att göra tester men tycker att det är lättare att göra tester på metoder som returnerar ett värde. 
+					I metoder som inte returnerar ett värde fick jag tänka till lite men det gick bra tillsut tycker jag.
+					PHPUnit har en bra hemsida med documentationer, vilket gjorde det lättare att förstå vilka assert man kan använda sig utav. </p>
+				<h3>Valde du att skriva om delar av din kod för att förbättra den eller göra den mer testbar, om så berätta lite hur du tänkte.</h3>
+					<p>Nej jag ändrade inte på något.</p>
+				<h3>Fundera över om du anser att testbar kod är något som kan identifiera “snygg och ren kod”.</h3>
+					<p>Det stämmer nog bra att om man har tester i åtanke från början, så blir det renare och snyggare kod. 
+					Det blir iallafall lättare att testa sin kod om man redan från början har det i åtanke.</p>
+				<h3>Vilken är din TIL för detta kmom?</h3>
+					<p>Tester med phpunit var nytt för mig, vilket var kul att jobba med.
+					Det var en del i utvecklingsmiljön som var nytt för mig också, som composer csfix, lint och phpdoc.
+					Det verkar vara bra verktyg att använda sig utav som kommer till bra nytta.  </p>
     </article>
 </div>
 
