--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -130,3 +130,20 @@ flex-direction: column;
 article .formgame {
   display: flex;
 }
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
