--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,6 +34,9 @@
             <li>
 				<a href={{ asset('./game') }}>Game</a>
 			</li>
+              <li>
+				<a href={{ asset('./bibliotek') }}>Bibliotek</a>
+			</li>
 			<hr>
 		</ul>
 	</nav>
