--- a/templates/bibliotek/bibliotek.html.twig
+++ b/templates/bibliotek/bibliotek.html.twig
@@ -14,8 +14,8 @@
 	<article>
 <div class="container">
 <ul>
-	<li><a href= {{ asset('./bibliotek/create') }}>create</a></li>
-	<li><a href= {{ asset('./bibliotek/show') }}>Show</a></li>
+	<li><a href= {{ asset('./bibliotek/create') }}>Lägg till bok</a></li>
+	<li><a href= {{ asset('./bibliotek/show') }}>Alla böcker</a></li>
 </ul>
 	
     </article>
