--- a/templates/report/report.html.twig
+++ b/templates/report/report.html.twig
@@ -107,6 +107,32 @@
 					<p>Tester med phpunit var nytt för mig, vilket var kul att jobba med.
 					Det var en del i utvecklingsmiljön som var nytt för mig också, som composer csfix, lint och phpdoc.
 					Det verkar vara bra verktyg att använda sig utav som kommer till bra nytta.  </p>
+
+			<h2>Kmom05</h2>
+				<h3>Gick det bra att jobba igenom övningen med Symfony och Doctrine. Något särskilt du tänkte/reagerade på under övningen?</h3>
+					<p>Det gick bra, övningen gick igenom Doctrine väldigt bra och det var inga konstigheter alls.</p>
+				<h3>Berätta om din applikation och hur du tänkte när du byggde upp den. Tänkte du något speciellt på användargränssnittet? Gick det bra att jobba med ORM i CRUD eller vad anser du om det?</h3>
+					<p>Min application är bygd som så att det finns en start sida. Och där kan man välja mellan att lägga till eller kolla på alla böcker som redan är tillagda.
+					Inne på create sidan så ska man skriva in detaljer om en bok i ett formulär.När man trycker på knappen "lägg till" så skickas man till sidan /bibliotek/show som visar alla tillagda böcker i en tabell.
+					I tabellen kan man trycka på id och då kommer man in på just den boken där man ser bokens titel, bild, ISBN. 
+					Där finns också 2 olika knappar delete och redigera.
+					Om man trycker på delete knappen så raderas boken.
+					När man trycker på redigera knappen så kommer man till en ny sida med ett formulär.
+					Och där kan man välja att redigera bokens detaljer. 
+					</p>
+
+				<h3>Berätta om du gjorde (delar av) extrauppgiften med användare och login.</h3>
+					<p>Nej jag hann tyvärr inte med det.</p>
+				<h3>Vad är din uppfattning om ORM så här långt och relatera gärna till andra sätt att jobba med applikationskod mot databaser?</h3>
+					<p>Det känns som ett smart sätt att jobba med databaser med. 
+					Det gick snabbt att komma igång med arbetssättet och var väldigt lärorikt.</p>
+				<h3>Vilken är din TIL för detta kmom?</h3>
+					<p>Ramverket Doctrine var helt nytt för mig och det var roligt att börja använda sig utav det.
+						Arbetssätter med ORM implementationen var nytt också för mig och var väldigt lärorikt att få börja jobba med.
+						Alla artiklar relaterade till uppgifterna var väldigt bra och gav en bra introduktion till Doctrine.
+						Att göra detta med crud i symfony var en väldigt bra uppgift och jag ser framemot kommande kmom.
+					</p>
+
     </article>
 </div>
 
