--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,6 +37,9 @@
               <li>
 				<a href={{ asset('./bibliotek') }}>Bibliotek</a>
 			</li>
+            <li>
+				<a href={{ asset('./metrics') }}>Metrics</a>
+			</li>
 			<hr>
 		</ul>
 	</nav>
