Done with kmom06 update

--- a/templates/metrics/metrics.html.twig
+++ b/templates/metrics/metrics.html.twig
@@ -54,17 +54,18 @@
                         </div>
                     <h2>Förbättringar</h2>
                         <p>1:Maintainability om jag i klassen Game kommenterar min kod bättre så borde värdet öka något som just nu står på 44.31. 
-                        Resultat efter: </p>
+                        Resultat efter: Ja måste ha feltolkat vad Maintainability innebär då ingen värde förändring skeddes.  </p>
                         <p>2:Coverage står just nu på 8%, om jag gör fler tester så kommer mätvärdet coverage öka. 
                         Jag kommer att testa koden i klassen Game (som har ett värde på 0% just nu) vilket kommer att öka värdet på coverage.
-                        Resultat efter:
+                        Resultat efter: Coverage höjdes till 11%, ingen jättehöjning men klassen Game höjdes från 0% till %
                         </p>
                         <p>3: I BibliotekController så finns ett Issues då jag har functionen index(Request $request) och använder aldrig request.
                         Så jag tar bort requesten och förväntar mig ett bättre resultat.
-                            Resultat efter:</p>
-                            
+Resultat efter: I scrutinizer står det nu överst "Good job, 1 issue was fixed".</p> 
                     <h2>Diskussion</h2>
-                        <p></p>
+                        <p>Allt detta är nytt för mig vilket kändes som en stor utmaning att genomföra alla uppgifter.
+                            Frågeställnineg om man kan aktivt jobba på detta sättet svarar jag på ja antagligen men i mitt fall tog det väldigt lång tid.</p>
+                            Fördelarna är att kodstilen blir bättre men nackdelarna är att det tar tid att genomföra allt.
                 </div>
 			</div>
 		</article>
