project ongoing process

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,6 +40,10 @@
             <li>
 				<a href={{ asset('./metrics') }}>Metrics</a>
 			</li>
+            <li>
+                <a href={{ asset('./proj')}}>Start</a>
+            </li>
+
 			<hr>
 		</ul>
 	</nav>
