--- a/templates/card/card.html.twig
+++ b/templates/card/card.html.twig
@@ -20,7 +20,7 @@ Cards undersidor
 					<li><a href= {{ asset('./card/deck') }}>card/deck</a></li>
 					<li><a href={{ asset('./card/deck/shuffle') }}>card/deck/shuffle</a></li>
 					<li><a href= {{ asset('./card/deck/draw') }}>card/deck/draw</a></li>
-					<li><a href={{ path("deal", {'amountOfCards':"2",'amountOfPlayers':"1"} )}}>card/deck/deal/{}/{}</a></li>
+					<li><a href={{ path("Deal", {'amountOfCards':"2",'amountOfPlayers':"1"} )}}>card/deck/deal/{}/{}</a></li>
 					<li><a href= {{ asset('./card/deck2') }}>card/deck2</a></li>
 					<li><a href= {{ asset('./card/api/deck') }}>card/api/deck</a></li>
 				</ul>
