--- a/templates/project/play.html.twig
+++ b/templates/project/play.html.twig
@@ -21,6 +21,7 @@
 		<a href={{ asset('./proj/play')}}>Spela Poker Solitaire</a>
 		<a href={{ asset('./proj/about')}} >Om</a>
 		<a href={{ asset('./proj/reset')}} >Återställ Databas</a>
+		<a href={{ asset('./card/deck/shuffle') }}>card/deck/shuffle</a>
 	</div>
 	<div class="row">
 		<div class="leftcolumn">
