--- a/templates/project/playpoker.html.twig
+++ b/templates/project/playpoker.html.twig
@@ -21,16 +21,118 @@
 		<a href={{ asset('./proj/play')}}>Spela Poker Solitaire</a>
 		<a href={{ asset('./proj/about')}} >Om</a>
 		<a href={{ asset('./proj/reset')}} >Återställ Databas</a>
+		<a href={{ asset('./card/deck/shuffle') }}>card/deck/shuffle</a>
 	</div>
 	<div class="row">
 		<div class="leftcolumn">
 			<div class="card">
-				<h2>Spela Poker Solitaire</h2>
-				<div class="fakeimg" style="height:600px;">
-					<h3>{{test}}</h3>
-					<p>Spelet börjar med att lägga ett kort på ett utrymme i ett 5x5 rutnät. Korten placeras ett i taget och när ett kort väl har placerats på rutnätet kan det inte längre flyttas. När alla 25 kort har delats ut, poängsätts på händerna på 5 kort som är bildade horisontellt i rader eller vertikalt i kolumner.[3] Antalet poäng beror på hierarkin av pokerhänder. Det finns två poängsystem: det engelska och det amerikanska poängsystemet. Det engelska systemet återspeglar svårigheten att få händerna i spelet; det amerikanska systemet återspeglar svårigheten att få händerna i faktisk poker. De två systemen betygsätter händernas poäng enligt följande:</p>
-	
+				<h2>Poker Solitaire</h2>
+				
+
+				<div class="wrapper">
+{% for e in 0..4 %}
+
+{% for i in 1..5 %}
+<div class="box">
+{% if horisontal[i][e] is defined %}
+
+
+{% if horisontal[i][e].suit == "&hearts;" %}
+	<p>{{horisontal[i][e].rank}}
+		&#10084;&#65039;</p>
+
+
+{% endif %}
+
+{% if horisontal[i][e].suit == "&diams;" %}
+
+	<p>&diams;{{horisontal[i][e].rank}}</p>
+
+{% endif %}
+
+{% if horisontal[i][e].suit == "&clubs;" %}
+
+
+	<p>&clubs;{{horisontal[i][e].rank}}</p>
+
+
+{% endif %}
+
+{% if horisontal[i][e].suit == "&spades;" %}
+
+	<p>&spades;{{horisontal[i][e].rank}}</p>
+
+{% endif %}
+
+
+
+
+{% endif %}
+
+</div>
+{% endfor %}
+{% endfor %}
+
+
+
+
+				
+
+
+
+<form method="POST" action={{asset('./proj/playpoker')}}>
+	<input type="radio" id="rad1" name="fav_language" value="1">
+
+	<label for="rad1">rad1</label><br>
+	<input type="radio" id="rad2" name="fav_language" value="2">
+
+	<label for="rad2">rad2</label><br>
+	<input type="radio" id="rad3" name="fav_language" value="3">
+
+	<label for="rad3">rad3</label><br>
+	<input type="radio" id="rad4" name="fav_language" value="4">
+
+	<label for="rad4">rad4</label><br>
+	<input type="radio" id="rad5" name="fav_language" value="5">
+
+	<label for="rad5">rad5</label>
+	<input type="submit" value="submit">
+</form>
+
 				</div>
+		<hr>
+<div class="wrapper">
+	<div class="box">
+		{% if oneCard.suit == "&hearts;" %}
+			<p>{{oneCard.rank}}
+				&#10084;&#65039;</p>
+
+
+		{% endif %}
+
+		{% if oneCard.suit == "&diams;" %}
+
+			<p>&diams;{{oneCard.rank}}</p>
+
+		{% endif %}
+
+		{% if oneCard.suit == "&clubs;" %}
+
+
+			<p>&clubs;{{oneCard.rank}}</p>
+
+
+		{% endif %}
+
+		{% if oneCard.suit == "&spades;" %}
+
+			<p>&spades;{{oneCard.rank}}</p>
+
+		{% endif %}
+
+	</div>
+</div>
+
 			</div>
 		</div>
 		<div class="rightcolumn">
