only full house left

--- a/templates/project/playpoker.html.twig
+++ b/templates/project/playpoker.html.twig
@@ -80,22 +80,23 @@
 
 
 
-<form method="POST" action={{asset('./proj/playpoker')}}>
-	<input type="radio" id="rad1" name="fav_language" value="1">
+<form  method="POST" action={{asset('./proj/playpoker')}}>
 
+	<input required type="radio" id="rad1" name="fav_language" value="1">
 	<label for="rad1">rad1</label><br>
-	<input type="radio" id="rad2" name="fav_language" value="2">
-
+	
+	<input required type="radio" id="rad2" name="fav_language" value="2">
 	<label for="rad2">rad2</label><br>
-	<input type="radio" id="rad3" name="fav_language" value="3">
-
+	
+	<input required type="radio" id="rad3" name="fav_language" value="3">
 	<label for="rad3">rad3</label><br>
-	<input type="radio" id="rad4" name="fav_language" value="4">
-
+	
+	<input required type="radio" id="rad4" name="fav_language" value="4">
 	<label for="rad4">rad4</label><br>
-	<input type="radio" id="rad5" name="fav_language" value="5">
-
+	
+	<input required type="radio" id="rad5" name="fav_language" value="5">
 	<label for="rad5">rad5</label>
+	
 	<input type="submit" value="submit">
 </form>
 
