--- a/public/styles/app2.css
+++ b/public/styles/app2.css
@@ -197,3 +197,9 @@ input[type=submit]:hover {
   grid-template-rows: repeat(5, 100px);
   grid-auto-flow: column;
 }
+
+.pointsUnderCards {
+  display: flex;
+  gap: 80px;
+  padding-left: 40px;
+}
